[Issue #21] fixed word wrap and firefox bug

--- a/SECP-service/src/main/resources/assets/app/directives/chat-message/chat-message.css
+++ b/SECP-service/src/main/resources/assets/app/directives/chat-message/chat-message.css
@@ -198,3 +198,11 @@
 .hoverable {
     cursor: pointer;
 }
+
+.wordwrap {
+   white-space: -moz-pre-wrap; /* Firefox */
+   white-space: -pre-wrap;     /* Opera <7 */
+   white-space: -o-pre-wrap;   /* Opera 7 */
+   word-wrap: break-word;      /* IE */
+   max-width: 230px;
+}
